--- a/src/surfacegames/MainWindow.form
+++ b/src/surfacegames/MainWindow.form
@@ -154,7 +154,7 @@
     <Container class="surfacegames.BackgroundDesktop" name="desktop">
       <Properties>
         <Property name="backgroundImage" type="java.awt.image.BufferedImage" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="ImageIO.read(new File(&quot;src/surfacegames/media/background1.jpg&quot;))" type="code"/>
+          <Connection code="ImageIO.read(getClass().getResource(&quot;/surfacegames/media/background1.jpg&quot;))" type="code"/>
         </Property>
       </Properties>
       <AuxValues>
