Puzzle sin funcionar.

--- a/src/surfacegames/MainWindow.form
+++ b/src/surfacegames/MainWindow.form
@@ -24,6 +24,14 @@
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="snakeMenuItemActionPerformed"/>
                   </Events>
                 </MenuItem>
+                <MenuItem class="javax.swing.JMenuItem" name="puzzleMenuItem">
+                  <Properties>
+                    <Property name="text" type="java.lang.String" value="Puzzle"/>
+                  </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="puzzleMenuItemActionPerformed"/>
+                  </Events>
+                </MenuItem>
               </SubComponents>
             </Menu>
           </SubComponents>
