--- a/src/surfacegames/MainWindow.form
+++ b/src/surfacegames/MainWindow.form
@@ -169,6 +169,9 @@
         <Property name="backgroundImage" type="java.awt.image.BufferedImage" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
           <Connection code="ImageIO.read(getClass().getResource(&quot;/surfacegames/media/fondo.jpg&quot;))" type="code"/>
         </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[800, 600]"/>
+        </Property>
       </Properties>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="}&#xa;catch(Exception ex){&#xa;    ex.printStackTrace();&#xa;}"/>
