--- a/src/minesweeper/MinesWindow.form
+++ b/src/minesweeper/MinesWindow.form
@@ -195,7 +195,7 @@
             </Container>
           </SubComponents>
         </Container>
-        <Container class="minesweeper.MinesPanel" name="mineSweeper21">
+        <Container class="minesweeper.MinesPanel" name="minesPanel">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
               <BorderConstraints direction="Center"/>
